# robust-route-optimiser

./: .gitignore  .zenodo.json  CITATION.cff  CONTRIBUTING.md  LICENSE  LICENSE-CODE  README.md  codemeta.json  index.md  pyproject.toml
.github/workflows/: pages.yml
data/sample/: README.md
docs/: _config.yml  index.md
docs/coastline/: rro-coastline-v0.6.0-rc1.md
docs/demo/: index.html
docs/handbook/: phase-a-engine.md  phase-b-state-graph.md  phase-c-logger.md
docs/notes/: design-log.md  logbook.md
src/rro/: __init__.py  cli.py  config.py  models.py  pipeline.py
src/rro/data/: __init__.py  feeds.py  ingest.py
src/rro/graph/: __init__.py  build.py  otp_client.py
src/rro/portfolio/: __init__.py  card.py  cluster.py  output.py
src/rro/routing/: __init__.py  decompose.py  deepening.py  dominance.py  hubs.py
src/rro/scoring/: __init__.py  assemble.py  creativity.py  objective.py  robustness.py
src/rro/tests/: conftest.py  test_cli.py  test_cluster.py  test_config.py  test_creativity.py  test_decompose.py  test_deepening.py  test_feeds.py  test_hubs.py  test_ingest.py  test_otp_client.py  test_pipeline.py  test_portfolio.py  test_routing.py  test_scoring.py
src/rro/tests/data/broken/: README.md
src/rro/tests/golden/: README.md  expected_pipeline_portfolio.json  expected_portfolio.json
